implemented code review improvements